--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "playground-macos",
-  "name": "Xiaohan Zou's Portfolio",
+  "name": "mkwagger's portfolio",
   "icons": [
     {
       "src": "logo/favicon.svg",
